--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <hutool.version>5.8.20</hutool.version>
         <fastjson.version>2.0.35</fastjson.version>
         <jwt.version>0.9.1</jwt.version>
+        <jedis.version>4.4.3</jedis.version>
     </properties>
     
     <dependencies>
@@ -42,6 +43,19 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        
+        <!-- Spring Boot Starter Data Redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        
+        <!-- Jedis -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>${jedis.version}</version>
         </dependency>
         
         <!-- MyBatis Plus -->
