--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -63,10 +63,15 @@ auth:
     paths:
       # 认证相关接口
       - /auth/login
+      - /auth/login/v2
       - /auth/register
+      - /auth/register-by-code
+      - /auth/send-code
       - /auth/logout
       - /auth/code
       - /auth/health
+      # 文件接口（下载不需要登录）
+      - /file/uploads/**
       # 系统接口
       - /error
       - /favicon.ico
@@ -92,3 +97,75 @@ auth:
       - /system/whitelist/**
       # 测试接口（可选，生产环境建议移除）
       - /test/**
+
+# 文件存储配置
+file:
+  storage:
+    # 存储类型：local-本地存储, tencent-cos-腾讯云COS, aliyun-oss-阿里云OSS
+    type: local
+    # 允许的文件类型
+    allowed-types: jpg,jpeg,png,gif,bmp,webp
+    # 最大文件大小（字节），默认5MB
+    max-file-size: 5242880
+    
+    # 本地存储配置
+    local:
+      # 本地存储根路径
+      root-path: ./uploads
+      # 访问路径前缀
+      url-prefix: /api/file/uploads
+    
+    # 腾讯云COS配置（使用时需要配置以下参数）
+    tencent-cos:
+      secret-id: ${TENCENT_COS_SECRET_ID:}
+      secret-key: ${TENCENT_COS_SECRET_KEY:}
+      bucket-name: ${TENCENT_COS_BUCKET_NAME:}
+      region: ${TENCENT_COS_REGION:ap-beijing}
+      cdn-domain: ${TENCENT_COS_CDN_DOMAIN:}
+    
+    # 阿里云OSS配置（使用时需要配置以下参数）
+    aliyun-oss:
+      access-key-id: ${ALIYUN_OSS_ACCESS_KEY_ID:}
+      access-key-secret: ${ALIYUN_OSS_ACCESS_KEY_SECRET:}
+      bucket-name: ${ALIYUN_OSS_BUCKET_NAME:}
+      endpoint: ${ALIYUN_OSS_ENDPOINT:oss-cn-beijing.aliyuncs.com}
+      cdn-domain: ${ALIYUN_OSS_CDN_DOMAIN:}
+
+# 通信服务配置（短信、邮件）
+communication:
+  # 短信配置
+  sms:
+    # 是否启用短信功能
+    enabled: true
+    # 短信服务提供商：aliyun-阿里云, tencent-腾讯云
+    provider: aliyun
+    
+    # 阿里云短信配置
+    aliyun:
+      access-key-id: ${ALIYUN_SMS_ACCESS_KEY_ID:}
+      access-key-secret: ${ALIYUN_SMS_ACCESS_KEY_SECRET:}
+      sign-name: ${ALIYUN_SMS_SIGN_NAME:敲敲木鱼}
+      verification-template-id: ${ALIYUN_SMS_VERIFICATION_TEMPLATE_ID:}
+      endpoint: dysmsapi.aliyuncs.com
+    
+    # 腾讯云短信配置
+    tencent:
+      secret-id: ${TENCENT_SMS_SECRET_ID:}
+      secret-key: ${TENCENT_SMS_SECRET_KEY:}
+      app-id: ${TENCENT_SMS_APP_ID:}
+      sign-name: ${TENCENT_SMS_SIGN_NAME:敲敲木鱼}
+      verification-template-id: ${TENCENT_SMS_VERIFICATION_TEMPLATE_ID:}
+      region: ap-beijing
+  
+  # 邮件配置
+  email:
+    # 是否启用邮件功能
+    enabled: true
+    # SMTP服务器配置
+    host: ${EMAIL_HOST:smtp.163.com}
+    port: ${EMAIL_PORT:25}
+    from: ${EMAIL_FROM:}
+    password: ${EMAIL_PASSWORD:}
+    from-name: ${EMAIL_FROM_NAME:敲敲木鱼}
+    ssl: ${EMAIL_SSL:false}
+    tls: ${EMAIL_TLS:true}
