--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,12 +6,11 @@ server:
 spring:
   application:
     name: hsmy
+  profiles:
+    active: @profiles.active@
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/hsmy_db?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
-    username: root
-    password: 123456
     druid:
       initial-size: 5
       min-idle: 5
@@ -23,20 +22,6 @@ spring:
       test-while-idle: true
       test-on-borrow: false
       test-on-return: false
-  
-  # Redis配置
-  redis:
-    host: localhost
-    port: 6379
-    database: 0
-    password: 
-    timeout: 5000ms
-    jedis:
-      pool:
-        max-active: 8
-        max-wait: -1ms
-        max-idle: 8
-        min-idle: 0
 
 mybatis-plus:
   mapper-locations: classpath:mapper/**/*.xml
