[feat] 手动/自动敲击木鱼

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+
+        <!-- Spring Boot Starter WebSocket -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
         
         <!-- Spring Boot Starter Data Redis -->
         <dependency>
@@ -124,6 +130,16 @@
     </dependencies>
     
     <repositories>
+        <repository>
+            <id>central</id>
+            <url>https://repo1.maven.org/maven2</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
         <repository>
             <id>ftxy-group</id>
             <url>http://10.10.0.58:8081/repository/ftxy-group/</url>
