--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,7 +2,8 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/hsmy_db?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
     username: root
-    password: sq123456
+    #password: sq123456
+    password: 123456
   
   redis:
     host: localhost
@@ -43,3 +44,13 @@ communication:
     from: dev@test.com
     password: dev_password
     from-name: 敲敲木鱼-开发环境
+
+wechatpay:
+  enabled: false
+  app-id: ${WECHATPAY_APP_ID:}
+  mch-id: ${WECHATPAY_MCH_ID:}
+  serial-no: ${WECHATPAY_SERIAL_NO:}
+  api-v3-key: ${WECHATPAY_API_V3_KEY:}
+  private-key-path: ${WECHATPAY_PRIVATE_KEY_PATH:}
+  notify-url: ${WECHATPAY_NOTIFY_URL:http://localhost:8080/api/v1.0/payment/wechat/notify}
+  description: ${WECHATPAY_DESCRIPTION:功德充值}
