[feat] 微信支付、回调mock测试

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -47,10 +47,9 @@ communication:
 
 wechatpay:
   enabled: false
-  app-id: ${WECHATPAY_APP_ID:}
-  mch-id: ${WECHATPAY_MCH_ID:}
-  serial-no: ${WECHATPAY_SERIAL_NO:}
-  api-v3-key: ${WECHATPAY_API_V3_KEY:}
-  private-key-path: ${WECHATPAY_PRIVATE_KEY_PATH:}
-  notify-url: ${WECHATPAY_NOTIFY_URL:http://localhost:8080/api/v1.0/payment/wechat/notify}
-  description: ${WECHATPAY_DESCRIPTION:功德充值}
+  app-id: 123
+  mch-id: 123
+  serial-no: abc123
+  api-v3-key: 123
+  notify-url: 'http://localhost:8080/api/v1.0/payment/wechat/notify'
+  description: '功德充值'
