--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,75 +1,60 @@
 spring:
   datasource:
-    url: jdbc:mysql://test-db.hsmy.com:3306/hsmy_db_test?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
-    username: hsmy_test
-    password: ${DB_PASSWORD_TEST:test123456}
-  
+    url: jdbc:mysql://10.10.15.27:3306/hsmy_db?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
+    username: root
+    #password: sq123456
+    password: 123456
+
   redis:
-    host: test-redis.hsmy.com
+    host: 10.10.0.45
     port: 6379
-    database: 1
-    password: ${REDIS_PASSWORD_TEST:}
+    database: 0
+    password:
     timeout: 5000ms
     jedis:
       pool:
-        max-active: 16
+        max-active: 8
         max-wait: -1ms
-        max-idle: 16
-        min-idle: 2
+        max-idle: 8
+        min-idle: 0
 
 mybatis-plus:
   configuration:
-    log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 logging:
   level:
-    com.hsmy: info
-    org.springframework.web: info
-    org.mybatis: warn
+    com.hsmy: debug
+    org.springframework.web: debug
+    org.mybatis: debug
 
 file:
   storage:
-    type: tencent-cos
     local:
-      root-path: ./uploads/test
+      root-path: ./uploads
       url-prefix: /api/file/uploads
-    tencent-cos:
-      secret-id: ${TENCENT_COS_SECRET_ID_TEST:}
-      secret-key: ${TENCENT_COS_SECRET_KEY_TEST:}
-      bucket-name: hsmy-test
-      region: ap-beijing
-      cdn-domain: https://test-cdn.hsmy.com
 
 communication:
   sms:
-    enabled: true
-    provider: aliyun
-    aliyun:
-      access-key-id: ${ALIYUN_SMS_ACCESS_KEY_ID_TEST:}
-      access-key-secret: ${ALIYUN_SMS_ACCESS_KEY_SECRET_TEST:}
-      sign-name: 敲敲木鱼测试
-      verification-template-id: ${ALIYUN_SMS_TEMPLATE_ID_TEST:}
+    enabled: false
   email:
-    enabled: true
+    enabled: false
     host: smtp.163.com
-    port: 465
-    from: ${EMAIL_FROM_TEST:}
-    password: ${EMAIL_PASSWORD_TEST:}
-    from-name: 敲敲木鱼-测试环境
-    ssl: true
-    tls: false
+    port: 25
+    from: dev@test.com
+    password: dev_password
+    from-name: 敲敲木鱼-开发环境
 
 wechatpay:
-  enabled: ${WECHATPAY_ENABLED_TEST:false}
-  app-id: ${WECHATPAY_APP_ID_TEST:}
-  mch-id: ${WECHATPAY_MCH_ID_TEST:}
-  serial-no: ${WECHATPAY_SERIAL_NO_TEST:}
-  api-v3-key: ${WECHATPAY_API_V3_KEY_TEST:}
-  private-key-path: ${WECHATPAY_PRIVATE_KEY_PATH_TEST:}
-  notify-url: ${WECHATPAY_NOTIFY_URL_TEST:https://test.hsmy.com/api/v1.0/payment/wechat/notify}
-  description: ${WECHATPAY_DESCRIPTION_TEST:功德充值}
+  enabled: false
+  app-id: 123
+  mch-id: 123
+  serial-no: abc123
+  api-v3-key: 123
+  notify-url: 'http://localhost:8080/api/v1.0/payment/wechat/notify'
+  description: '功德充值'
 
 wechat:
   mini:
-    app-id: ${WECHAT_MINI_APP_ID_TEST:}
-    secret: ${WECHAT_MINI_SECRET_TEST:}
+    app-id: wx50e2472b35427201
+    secret: f9b057d34140a08f3aff1b28053a62ac
